@@ -1,3 +1,4 @@
+10/27/11 Dilution: use (0,1) for range of M1 and M2
 10/27/11 Molarity: minor cleanup in model
 10/27/11 Dilution: change V1 range to (0,0.2)
 10/27/11 fix SolutionNode to handle zero-volume solution
